# ACT_INT2

./: CMakeLists.txt  README.md  RelexionActInt2_Equipo6.docx  sonar-project.properties
.github/workflows/: build.yml
src/: Kruskal.h  MaxFlowSolver.h  linear_search.h  main.cpp  traveling_salesman.h
tests/: MaxFlowSolver.cpp  kruskal.cpp  test_linear_search.cpp  tsp.cpp
